# src/router.js
@@ -20,6 +20,7 @@ router.get("/api/v1/users/:id", userController.getUserById); //유저별 조회
 //펫
 router.post("/api/v1/pets", verify, petController.registerPet); // 펫 등록
 router.get('/api/v1/pets/search', petController.getPetByName);
+router.get('/api/v1/pets/list', verify, petController.getPetsByUserId);
 router.put("/api/v1/pets/:petId", verify, petController.updatePet); // 펫 정보 수정
 router.delete("/api/v1/pets/:petId", verify, petController.deletePet); // 펫 정보 삭제
 router.get("/api/v1/pets/:petId", verify, petController.getPet); // 특정 펫 정보 조회
