# src/swagger/swagger-pet.yaml
@@ -80,7 +80,7 @@ paths:
 
   /api/v1/pets/{petId}:
     get:
-      summary: 특정 펫 정보 조회
+      summary: 특정 펫 정보 조회(로그인 필요)
       tags:
         - Pets
       security:
@@ -104,7 +104,7 @@ paths:
         500:
           description: 서버 오류
     put:
-      summary: 펫 정보 수정
+      summary: 펫 정보 수정(로그인 필요)
       tags:
         - Pets
       security:
@@ -164,7 +164,7 @@ paths:
           description: 서버 오류
 
     delete:
-      summary: 펫 정보 삭제
+      summary: 펫 정보 삭제(로그인 필요)
       tags:
         - Pets
       security:
@@ -190,6 +190,7 @@ paths:
           description: 펫을 찾을 수 없음
         500:
           description: 서버 오류
+
   /api/v1/pets/search:
     get:
       summary: 보호자 이름과 펫 이름으로 펫 조회
@@ -235,6 +236,32 @@ paths:
                     type: string
         404:
           description: 사용자 또는 펫을 찾을 수 없음
+        500:
+          description: 서버 오류
+
+  /api/v1/pets/list:
+    get:
+      summary: 모든 펫 정보 조회(로그인 필요)
+      tags:
+        - Pets
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: 펫 정보 조회 성공
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  result:
+                    type: string
+                  pets:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Pet"
+        404:
+          description: 펫을 찾을 수 없음
         500:
           description: 서버 오류
 
